--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: python
 services: docker
 
 before_install:
-  - docker compose build
+  - docker-compose build
   - docker-compose up -d
 
 script: docker-compose exec api python -m pytest "src/tests" 
